Upgrade OAuth base64 decoder to Java 11 compatible version.